openshift/poll-deployment.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: poll
    labels:
      app: periscope
      component: poll
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    template:
      metadata:
        labels:
          app: periscope
          component: poll
      spec:
        serviceAccountName: poll
        containers:
        - name: poll
          image: poll
          args:
          - --config-path=/etc/config/poll.json
          - --psql-config-path=/etc/postgresql-config/postgresql.json
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
          - mountPath: /etc/postgresql
            name: credentials
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: psql-config
            mountPath: /etc/postgresql-config
            readOnly: true
        volumes:
        - name: credentials
          secret:
            defaultMode: 420
            secretName: postgresql
        - name: config
          configMap:
            name: poll-config
        - name: psql-config
          configMap:
            name: psql-config
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - poll
        from:
          kind: ImageStreamTag
          name: "poll:latest"
      type: ImageChange
